--- a/frontend/src/app/pages/post/post.html
+++ b/frontend/src/app/pages/post/post.html
@@ -10,7 +10,7 @@
 
 <div class="card">
     <div class="font-semibold text-xl">Gönderiler</div>
-    <p-dataview [value]="tableList" [layout]="'grid'">
+    <p-dataview [value]="tableList" [layout]="'grid'" emptyMessage="Kayıt Bulunamadı">
 
         <ng-template #grid let-items>
             <div class="grid grid-cols-12 gap-4">
@@ -133,7 +133,7 @@
                                     </p-accordion-header>
 
                                     <p-accordion-content>
-                                        <p class="m-0">{{ comment.comment }}</p>
+                                        <p class="m-0">{{ comment.createdDate | date: 'MM/dd/yyyy' }} : {{ comment.comment }}</p>
                                     </p-accordion-content>
                                 </p-accordion-panel>
                             </p-accordion>
